--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/binRick/zfsArc#readme",
   "dependencies": {
+    "chalk": "^2.1.0",
+    "cli-clear": "^1.0.4",
     "pretty-bytes": "^4.0.2",
     "range-prompt": "^0.1.1"
   }
